# metalu

./: .gitignore  .vercelignore  LEEME.txt  README-LAN.md  README.md  iniciar.bat  iniciar.sh  neutralino.config.json  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/workflows/: build.yml
.playwright-cli/: page-2026-05-29T15-54-32-857Z.yml  page-2026-05-29T15-55-09-443Z.yml  page-2026-05-29T15-56-35-934Z.yml
client/: index.html  styles.css
dist-server/metalu-client-v0.2.0/: LEEME.txt
docs/operations/: CLIENT-UPDATE.md  INSTALL.md  (+2 more)
prisma/: schema.prisma  seed.ts
scripts/: build-client-bundle.sh  build-lan-zip.sh  build-server-bundle.sh  build.sh  dev-server.ts  generate-install-guide.ts  release.sh  smoke-reports-pdf.ts  smoke-suppliers-reports-pdf.ts
src/: middleware.ts  proxy.ts
src-tauri/: Cargo.toml  first_run.html  tauri.client.conf.json  tauri.conf.json  tauri.server.conf.json
src-tauri-client/: Cargo.toml  tauri.conf.json
src-tauri-client/icons/: icon.icns
src-tauri-client/src/: commands.rs  discovery.rs  lib.rs  main.rs  server_url.rs
src-tauri/icons/: README.md
src-tauri/src/: client.rs  client_app.rs  commands.rs  data_dir.rs  discovery.rs  health.rs  lib.rs  main.rs  server.rs
src-tauri/tests/: client_app.rs  client_discovery.rs  discovery_integration.rs  health_loop.rs
tests/: api-health-error-code.test.ts  api-health-server-info.test.ts  api-version-contract.test.ts  api-version-endpoint.test.ts  backup-export.test.ts  backup-roundtrip.test.ts  discovery-e2e.test.ts  prisma-pglite-adapter.test.ts  setup.ts
(+347 files in other folders)
