[package]
name = "metalu-client"
version = "0.2.0"
edition = "2021"
description = "Metalu Cliente — Tauri 2.x shell"
default-run = "metalu-client"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "time", "rt-multi-thread", "macros"] }
dirs = "5"

[[bin]]
name = "metalu-client"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
