[package]
name = "metalu"
version = "0.1.0"
description = "MetalFlow ERP desktop shell"
edition = "2021"

[lib]
name = "metalu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "time", "net"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
gethostname = "0.5"
url = "2"

[dev-dependencies]
tempfile = "3"
